# Thunder_Class_Test

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp  main_window.cpp  main_window.h
client/src/core/: session.h
client/src/network/: tcp_client.cpp  tcp_client.h
client/src/pages/: admin_page.cpp  admin_page.h  login_page.cpp  login_page.h  student_page.cpp  student_page.h  teacher_page.cpp  teacher_page.h
common/: CMakeLists.txt
common/model/: class_event.h  class_info.h  question.h  user.h
common/protocol/: message_type.h  protocol.cpp  protocol.h
docs/: acceptance-checklist.md  architecture.md  defense-script.md  design-summary.md  progress.md
server/: CMakeLists.txt
server/src/: class_manager.cpp  class_manager.h  main.cpp  question_manager.cpp  question_manager.h  session_manager.cpp  session_manager.h  statistics_exporter.cpp  statistics_exporter.h  tcp_server.cpp  tcp_server.h  user_store.cpp  user_store.h
tests/: CMakeLists.txt  test_audio_client.cpp  test_class_client.cpp  test_edge_cases.cpp  test_login_client.cpp  test_question_client.cpp  test_random_call_client.cpp  test_screen_share_client.cpp  test_socket.h  test_stats_client.cpp
